--- a/style.css
+++ b/style.css
@@ -1,10 +1,12 @@
 *{
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
 }
 
 body{
     background-image: url('background.jpg');
+    background-repeat: no-repeat;
     background-size: cover;
     width: 100%;
     min-height: 100vh;
@@ -15,37 +17,72 @@ body{
     color: white;
 }
 .container{
+    width: 100%;
     display: flex;
-    flex-wrap: wrap;
-    width: 600px;
-    height: 600px;
+    flex-direction: column;
+    align-items: center;
+}
+.wrapper{
+    display: flex;
     justify-content: center;
 }
 input, .submit, .clear{
+    text-align: center;
+    font-size: 18px;
     outline: none;
     border: none;
     border-radius: 5px;
-    background-color: antiquewhite;
+    background-color: #F1E1AE;
+}
+.btn-wrapper{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+button{
+    box-shadow: 2px 2px 2px black;
+    min-width: 15%;
+    margin: 5px 0px 5px 0px;
+    padding: 15px;
 }
 input{
-    width: 40%;
+    box-shadow: 2px 2px 2px black;
+    width: 50%;
+    width: 100px;
     height: 30px;
     margin: 5px 10px 5px 10px;
 }
-.submit, .clear{
-    width: 100%;
-    height: 50px;
+input:focus::placeholder {
+    color: transparent;
+  }
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
 }
+input[type=number] {
+    -moz-appearance: textfield;
+  }
 .result{
-    font-size: 30px;
+    font-size: 20px;
     width: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
 }
 .wrap-img{
-    width: 150px;
+    width: 100px;
 }
 .img{
     width: 100%;
+}
+.title{
+    text-align: center;
+    font-size: 30px;
+    margin: 0px 0px 30px 0px;
+    color: #F1E1AE;
+}
+.title__text{
+    text-shadow: 5px 5px black;
 }
